# SAWIT-Net

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
examples/: colab_medmnist_demo.py  compare_strategies.py  train_csv.py  train_folder.py  train_imagefolder.py  train_medmnist.py
sawit_net/: __init__.py  arcface.py  buffer.py  cli.py  config.py  data.py  datasets.py  learner.py  losses.py  memory.py  metrics.py  models.py  trainer.py  utils.py
tests/: smoke_test.py
